[project]
name = "MarkupSafe"
description = "Safely add untrusted strings to HTML/XML markup."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
maintainers = [{name = "Pallets", email = "contact@palletsprojects.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.7"
dynamic = ["version"]

[project.urls]
Donate = "https://palletsprojects.com/donate"
Documentation = "https://markupsafe.palletsprojects.com/"
Changes = "https://markupsafe.palletsprojects.com/changes/"
"Source Code" = "https://github.com/pallets/markupsafe/"
"Issue Tracker" = "https://github.com/pallets/markupsafe/issues/"
Chat = "https://discord.gg/pallets"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "markupsafe.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["markupsafe", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.mypy]
python_version = "3.7"
files = ["src/markupsafe"]
show_error_codes = true
pretty = true
strict = true
local_partial_types = true
warn_unreachable = true
