[project]
name = "MarkupSafe"
version = "3.0.0.dev"
description = "Safely add untrusted strings to HTML/XML markup."
readme = "README.rst"
license = {file = "LICENSE.rst"}
maintainers = [{name = "Pallets", email = "contact@palletsprojects.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.8"

[project.urls]
Donate = "https://palletsprojects.com/donate"
Documentation = "https://markupsafe.palletsprojects.com/"
Changes = "https://markupsafe.palletsprojects.com/changes/"
"Source Code" = "https://github.com/pallets/markupsafe/"
"Issue Tracker" = "https://github.com/pallets/markupsafe/issues/"
Chat = "https://discord.gg/pallets"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["markupsafe", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.mypy]
python_version = "3.8"
files = ["src/markupsafe", "tests"]
show_error_codes = true
pretty = true
strict = true

[tool.pyright]
pythonVersion = "3.8"
include = ["src/markupsafe", "tests"]
typeCheckingMode = "basic"

[tool.ruff]
src = ["src"]
fix = true
unsafe-fixes = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
