[metadata]
license_file = LICENSE.rst

[egg_info]
tag_build = dev

[aliases]
release = egg_info -Db ''

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    markupsafe

[coverage:paths]
source =
    src/markupsafe
    .tox/*/lib/python*/site-packages/markupsafe
    .tox/pypy/site-packages/markupsafe
