[metadata]
name = MarkupSafe
version = attr: markupsafe.__version__
url = https://palletsprojects.com/p/markupsafe/
project_urls =
    Documentation = https://markupsafe.palletsprojects.com/
    Code = https://github.com/pallets/markupsafe
    Issue tracker = https://github.com/pallets/markupsafe/issues
license = BSD-3-Clause
license_files = LICENSE.rst
author = Armin Ronacher
author_email = armin.ronacher@active-4.com
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
description = Safely add untrusted strings to HTML/XML markup.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Text Processing :: Markup :: HTML

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = true
source =
    markupsafe
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
